@@ -27,7 +27,7 @@ project(AMI_AmiDds_Base_AmiDds_Sender_lem_gen) : ciaoidldefaults, dds4ccm {
   }
 }
 
-project(AMI_AmiDds_Base_AmiDds_Sender_lem_stub) : ccm_svnt, ami, dds4ccm_base   {
+project(AMI_AmiDds_Base_AmiDds_Sender_l_stub) : ccm_svnt, ami, dds4ccm_base   {
   after += AMI_AmiDds_Base_AmiDds_Sender_lem_gen AMI_AmiDds_Base_stub Conn_AmiDds_Base_stub DDS_AmiDds_Base_stub 
   libs  += AmiDds_Base_stub DDS_AmiDds_Base_stub 
   libpaths += ../lib
@@ -78,7 +78,7 @@ project(AMI_AmiDds_Base_AmiDds_Sender_stub) : ccm_stub, ami,dds4ccm_base   {
 }
 
 project(AMI_AmiDds_Base_AmiDds_Sender_exec) : ciao_executor, ami, ami4ccm_stub, dds4ccm_lem_stub {
-  after   += AMI_AmiDds_Base_AmiDds_Sender_lem_stub AMI_AmiDds_Base_AmiDds_Sender_stub AMI_AmiDds_Base_exec Conn_AmiDds_Base_stub AMI_AmiDds_Base_lem_stub DDS_AmiDds_Connector_stub DDS_AMIDDS_Connector_lem_stub
+  after   += AMI_AmiDds_Base_AmiDds_Sender_l_stub AMI_AmiDds_Base_AmiDds_Sender_stub AMI_AmiDds_Base_exec Conn_AmiDds_Base_stub AMI_AmiDds_Base_lem_stub DDS_AmiDds_Connector_stub DDS_AMIDDS_Connector_lem_stub
   sharedname = AmiDds_Sender_exec
   libs += AmiDds_Sender_stub AmiDds_Sender_lem_stub AmiDds_Base_stub AmiDds_Base_lem_stub DDS_AmiDds_Base_stub DDS_AmiDds_Connector_stub DDS_AMIDDS_Connector_lem_stub 
   libpaths += ../lib
@@ -102,7 +102,7 @@ project(AMI_AmiDds_Base_AmiDds_Sender_exec) : ciao_executor, ami, ami4ccm_stub, 
 }
 
 project(AMI_AmiDds_Base_AmiDds_Sender_svnt) : ciao_servant, ami, dds4ccm_lem_stub, dds4ccm_skel {
-  after      += AMI_AmiDds_Base_skel AMI_AmiDds_Base_AmiDds_Sender_lem_stub AMI_AmiDds_Base_AmiDds_Sender_stub AMI_AmiDds_Base_exec AMI_AmiDds_skel DDS_AmiDds_Connector_stub DDS_AMIDDS_Connector_lem_stub DDS_AmiDds_Connector_svnt 
+  after      += AMI_AmiDds_Base_skel AMI_AmiDds_Base_AmiDds_Sender_l_stub AMI_AmiDds_Base_AmiDds_Sender_stub AMI_AmiDds_Base_exec AMI_AmiDds_skel DDS_AmiDds_Connector_stub DDS_AMIDDS_Connector_lem_stub DDS_AmiDds_Connector_svnt 
   sharedname  = AmiDds_Sender_svnt
   libs       += AmiDds_Sender_stub AmiDds_Sender_lem_stub  \
                 AmiDds_Base_skel AmiDds_Base_stub \
